check in tweaked templates with fresh latex

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,18 @@
 markdown: pandoc
+title: "Test publications"
 pandoc:
     skip: false
     output: ./tmp
-    flags: '--csl=../apa.csl --bibliography=../ref.bib --smart -V lang=spanish
+    flags: '-N --csl=../apa.csl --bibliography=../ref.bib --smart
             --section-divs --email-obfuscation=references'
     site_flags: '--toc --template=layouts/toc.html'
     outputs:
-        pdf: '-V fontsize=10pt,a5paper,twoside
-                -V documentclass=book
+        pdf: '-V fontsize=12pt,letter
+                -V documentclass=article
                 -V geometry=hcentering
                 -V geometry=bindingoffset=1cm
+                -V geometry:margin=1in
+                --template ./layouts/standalone.latex
                 --latex-engine=xelatex
                 --table-of-contents
                 --include-in-header=layouts/header.tex
@@ -17,8 +20,8 @@ pandoc:
         epub: '-V lang=es --epub-chapter-level=2'
         mediawiki:
         rst:
-        latex: '-V fontsize=10pt,a5paper,twoside
-                  -V documentclass=book
+        latex: '-V fontsize=10pt,letter
+                  -V documentclass=article
                   -V geometry=hcentering
                   -V geometry=bindingoffset=1cm
                   --latex-engine=xelatex
@@ -26,7 +29,7 @@ pandoc:
                   --include-in-header=layouts/header.tex
                   --include-before-body=layouts/license.tex'
 
-destination: /srv/http/endefensadelsl.org
+destination: ./_site
 source:   ./src
 layouts:  ./layouts
 plugins:  ./_plugins
