--- a/_config.dist.yml
+++ b/_config.dist.yml
@@ -2,7 +2,7 @@ markdown: pandoc
 pandoc:
     skip: false
     output: ./tmp
-    flags: '--csl=../apa.csl --bibliography=../ref.bib --smart -V lang=spanish
+    flags: '--csl=apa.csl --bibliography=ref.bib --smart -V lang=spanish
             --section-divs --email-obfuscation=references'
     site_flags: '--toc --template=layouts/toc.html'
     outputs:
